--- a/index.html
+++ b/index.html
@@ -2,20 +2,37 @@
 
 <html>
 	<head>
-		<title>Skilledmums</title>
+		<title>Skilled Mums</title>
+		<meta name="description" content="An online community supporting mums worldwide in the workplace Skilled Mums is the place to find the resources and help you need">
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
 		<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
+		<meta property="og:title" content="Skilled Mums" />
+		<meta property="og:url" content="http://www.skilledmums.org" />
+		<meta property="og:image" content="http://www.skilledmums.org/images/logo500x500.png" />
+		<meta property="og:description" content="An online community supporting mums in the workplace" />
+
+		<link rel=”shortcut icon” href="./images/favicon.ico” type=”image/x-icon” />
 	</head>
 	<body>
+	<!-- Google Tag Manager -->
+		<noscript><iframe src="//www.googletagmanager.com/ns.html?id=GTM-WVDC28"
+		height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>			<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+		new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+		j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+		'//www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+		})(window,document,'script','dataLayer','GTM-WVDC28');</script>
+		<!-- End Google Tag Manager -->
 	
 		<!-- Header -->
 			<header id="header">
-				<img src="./images/logo350x150.png" alt="Skilled Mums" style="width:350px;height:150px;">
-				<p>Sign up below and you'll be the first to know when we launch our community<br/>
+				<img src="./images/logo350x150.png" alt="Skilled Mums" style="width:315px;height:135px;">
+				<h1>An online community supporting mums in the workplace.</h1>
+				Sign up today to be the first to know when we launch.<br>
+				Beta users click <a href="http://skilledmums.com">here</a>
 			</header>
 
 		<!-- Signup Form -->
@@ -32,7 +49,9 @@
 					<li><a href="mailto: info@skilledmums.com" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
 				</ul>
 				<ul class="copyright">
-					<li>&copy; skilledmums.com</li><li>Credits: <a href="http://skilledmums.com">Mother icon by Freepik</a></li>
+					<li>&copy; skilledmums.org</li> 
+					<li><a href="http://blog.skilledmums.com">Blog</a></li>
+					<li><a href="http://www.skilledmums.org">Mother icon by Freepik</a></li>
 				</ul>
 			</footer>
 
